--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.+'
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
@@ -30,14 +29,17 @@ android {
 }
 
 repositories {
-    mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url "$projectDir/../../react-native/android"
+    }
 }
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile('com.twitter.sdk.android:twitter:1.13.1@aar') {
-        transitive = true
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
+        transitive = true;
     }
 }
