Changed to promises
Update README.md

Update README.md

Update LICENSE

Update README.md

Update README.md

a

Update README.md

up ver

Added option for erroring on empty email

Update README.md

Update README.md

React Native 0.31 upgrade fix

Update TwitterSigninModule.java

Compose tweets

Compose tweets

Compose tweets

Compose Tweets

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ android/app/libs
 android/keystores/debug.keystore
 android/gradlew
 android/gradlew.bat
+android/android.iml
+android/gradle/wrapper/gradle-wrapper.jar
+android/gradle/wrapper/gradle-wrapper.properties
