Update to support react 0.30

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,10 @@ android {
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url "$projectDir/../../react-native/android"
+    }
 }
 
 dependencies {
