--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,18 +2,19 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -31,9 +32,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile('com.twitter.sdk.android:twitter-core:3.2.0') {
+    implementation 'com.facebook.react:react-native:+'
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation('com.twitter.sdk.android:twitter-core:3.0.0') {
         transitive = true
     }
 }
