--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -137,10 +137,10 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-twitter-signin')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:appcompat-v7:26+"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-twitter-signin')
 }
 
 // Run this once to be able to run the application with BUCK
