--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,27 @@
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -28,12 +32,16 @@ android {
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
 }
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile('com.twitter.sdk.android:twitter-core:3.2.0') {
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
     }
 }
