--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "dependencies": {
-    "react": "^16.4.2",
-    "react-native": "^0.56.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^16.4.1",
     "react-native": "^0.56.0"
