--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,15 +3,16 @@ def safeExtGet(prop, fallback) {
 }
 
 buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        google()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-    }
+	if (project == rootProject) {
+		repositories {
+			jcenter()
+			mavenCentral()
+			google()
+		}
+		dependencies {
+		  classpath("com.android.tools.build:gradle:3.1.3")
+		}	
+	}
 }
 
 apply plugin: 'com.android.library'
