chore: add example to npm ignore

--- a/.npmignore
+++ b/.npmignore
@@ -123,3 +123,6 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+# ignore example folder
+Example
