--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'Example'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':react-native-twitter-signin'
-project(':react-native-twitter-signin').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-twitter-signin/android')
+project(':react-native-twitter-signin').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
